--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "xlsx-color-fix",
-	"version": "0.14.32",
+	"version": "0.14.36",
 	"author": "baiqing.su",
 	"description": "fork form birnfly/js-xlsx: https://github.com/birnfly/js-xlsx",
 	"keywords": [
@@ -53,7 +53,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git://github.com/birnfly/js-xlsx.git"
+		"url": "git://github.com/1731516270/js-xlsx.git"
 	},
 	"scripts": {
 		"pretest": "git submodule init && git submodule update",
